src/parser.output
Grammar

    0 $accept: program $end

    1 program: task_list

    2 task_list: task_definition
    3          | task_list task_definition

    4 $@1: ε

    5 task_definition: TASK IDENTIFIER LBRACE $@1 task_body RBRACE

    6 task_body: run_stmt opt_schedule opt_dependency

    7 run_stmt: RUN STRING

    8 opt_schedule: schedule_clause
    9             | ε

   10 schedule_clause: EVERY frequency AT TIME

   11 frequency: DAY
   12          | WEEK ON DAY_NAME

   13 opt_dependency: dependency_clause
   14               | ε

   15 dependency_clause: AFTER IDENTIFIER opt_condition

   16 opt_condition: IF_COND condition
   17              | ε

   18 condition: SUCCESS
   19          | FAILURE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TASK (258) 5
    RUN (259) 7
    EVERY (260) 10
    DAY (261) 11
    WEEK (262) 12
    ON (263) 12
    AT (264) 10
    AFTER (265) 15
    IF_COND (266) 16
    LBRACE (267) 5
    RBRACE (268) 5
    IDENTIFIER <sval> (269) 5 15
    STRING <sval> (270) 7
    TIME <sval> (271) 10
    DAY_NAME <sval> (272) 12
    SUCCESS <sval> (273) 18
    FAILURE <sval> (274) 19


Nonterminals, with rules where they appear

    $accept (20)
        on left: 0
    program (21)
        on left: 1
        on right: 0
    task_list (22)
        on left: 2 3
        on right: 1 3
    task_definition (23)
        on left: 5
        on right: 2 3
    $@1 (24)
        on left: 4
        on right: 5
    task_body (25)
        on left: 6
        on right: 5
    run_stmt (26)
        on left: 7
        on right: 6
    opt_schedule (27)
        on left: 8 9
        on right: 6
    schedule_clause (28)
        on left: 10
        on right: 8
    frequency (29)
        on left: 11 12
        on right: 10
    opt_dependency (30)
        on left: 13 14
        on right: 6
    dependency_clause (31)
        on left: 15
        on right: 13
    opt_condition (32)
        on left: 16 17
        on right: 15
    condition (33)
        on left: 18 19
        on right: 16


State 0

    0 $accept: • program $end

    TASK  shift, and go to state 1

    program          go to state 2
    task_list        go to state 3
    task_definition  go to state 4


State 1

    5 task_definition: TASK • IDENTIFIER LBRACE $@1 task_body RBRACE

    IDENTIFIER  shift, and go to state 5


State 2

    0 $accept: program • $end

    $end  shift, and go to state 6


State 3

    1 program: task_list •
    3 task_list: task_list • task_definition

    TASK  shift, and go to state 1

    $default  reduce using rule 1 (program)

    task_definition  go to state 7


State 4

    2 task_list: task_definition •

    $default  reduce using rule 2 (task_list)


State 5

    5 task_definition: TASK IDENTIFIER • LBRACE $@1 task_body RBRACE

    LBRACE  shift, and go to state 8


State 6

    0 $accept: program $end •

    $default  accept


State 7

    3 task_list: task_list task_definition •

    $default  reduce using rule 3 (task_list)


State 8

    5 task_definition: TASK IDENTIFIER LBRACE • $@1 task_body RBRACE

    $default  reduce using rule 4 ($@1)

    $@1  go to state 9


State 9

    5 task_definition: TASK IDENTIFIER LBRACE $@1 • task_body RBRACE

    RUN  shift, and go to state 10

    task_body  go to state 11
    run_stmt   go to state 12


State 10

    7 run_stmt: RUN • STRING

    STRING  shift, and go to state 13


State 11

    5 task_definition: TASK IDENTIFIER LBRACE $@1 task_body • RBRACE

    RBRACE  shift, and go to state 14


State 12

    6 task_body: run_stmt • opt_schedule opt_dependency

    EVERY  shift, and go to state 15

    $default  reduce using rule 9 (opt_schedule)

    opt_schedule     go to state 16
    schedule_clause  go to state 17


State 13

    7 run_stmt: RUN STRING •

    $default  reduce using rule 7 (run_stmt)


State 14

    5 task_definition: TASK IDENTIFIER LBRACE $@1 task_body RBRACE •

    $default  reduce using rule 5 (task_definition)


State 15

   10 schedule_clause: EVERY • frequency AT TIME

    DAY   shift, and go to state 18
    WEEK  shift, and go to state 19

    frequency  go to state 20


State 16

    6 task_body: run_stmt opt_schedule • opt_dependency

    AFTER  shift, and go to state 21

    $default  reduce using rule 14 (opt_dependency)

    opt_dependency     go to state 22
    dependency_clause  go to state 23


State 17

    8 opt_schedule: schedule_clause •

    $default  reduce using rule 8 (opt_schedule)


State 18

   11 frequency: DAY •

    $default  reduce using rule 11 (frequency)


State 19

   12 frequency: WEEK • ON DAY_NAME

    ON  shift, and go to state 24


State 20

   10 schedule_clause: EVERY frequency • AT TIME

    AT  shift, and go to state 25


State 21

   15 dependency_clause: AFTER • IDENTIFIER opt_condition

    IDENTIFIER  shift, and go to state 26


State 22

    6 task_body: run_stmt opt_schedule opt_dependency •

    $default  reduce using rule 6 (task_body)


State 23

   13 opt_dependency: dependency_clause •

    $default  reduce using rule 13 (opt_dependency)


State 24

   12 frequency: WEEK ON • DAY_NAME

    DAY_NAME  shift, and go to state 27


State 25

   10 schedule_clause: EVERY frequency AT • TIME

    TIME  shift, and go to state 28


State 26

   15 dependency_clause: AFTER IDENTIFIER • opt_condition

    IF_COND  shift, and go to state 29

    $default  reduce using rule 17 (opt_condition)

    opt_condition  go to state 30


State 27

   12 frequency: WEEK ON DAY_NAME •

    $default  reduce using rule 12 (frequency)


State 28

   10 schedule_clause: EVERY frequency AT TIME •

    $default  reduce using rule 10 (schedule_clause)


State 29

   16 opt_condition: IF_COND • condition

    SUCCESS  shift, and go to state 31
    FAILURE  shift, and go to state 32

    condition  go to state 33


State 30

   15 dependency_clause: AFTER IDENTIFIER opt_condition •

    $default  reduce using rule 15 (dependency_clause)


State 31

   18 condition: SUCCESS •

    $default  reduce using rule 18 (condition)


State 32

   19 condition: FAILURE •

    $default  reduce using rule 19 (condition)


State 33

   16 opt_condition: IF_COND condition •

    $default  reduce using rule 16 (opt_condition)
